# stock-logistics-shopfloor

./: .pre-commit-config.yaml  README.md  test-requirements.txt
setup/_metapackage/: pyproject.toml
shopfloor/: README.rst  __manifest__.py
shopfloor/actions/: data.py  inventory.py  message.py  move_line_search.py  schema.py  search.py  stock.py
shopfloor/i18n/: it.po
shopfloor/models/: shopfloor_menu.py  stock_location.py  stock_move.py  stock_move_line.py  stock_picking.py  stock_quant_package.py
shopfloor/services/: checkout.py  cluster_picking.py  delivery.py  location_content_transfer.py  service.py  single_pack_transfer.py  zone_picking.py
shopfloor/tests/: __init__.py  common.py  model_common.py  test_actions_change_package_lot.py  test_actions_data.py  test_actions_data_base.py  test_actions_data_detail.py  test_checkout_auto_post.py  test_checkout_base.py  test_checkout_change_package_type.py  test_checkout_done.py  test_checkout_list_package.py  test_checkout_new_package.py  test_checkout_no_package.py  test_checkout_scan.py  test_checkout_scan_line.py  test_checkout_scan_line_no_prefill_qty.py  test_checkout_scan_package_action.py  test_checkout_select_line.py  test_cluster_picking_base.py  test_delivery_base.py  (+27 more)
shopfloor_batch_automatic_creation/: __manifest__.py
shopfloor_checkout_sync/: __manifest__.py
shopfloor_cluster_picking_repack/: README.rst  __manifest__.py
shopfloor_cluster_picking_repack_mobile/: README.rst  __manifest__.py
shopfloor_dangerous_goods/: README.rst  __manifest__.py
shopfloor_dangerous_goods_mobile/: README.rst  __manifest__.py
shopfloor_delivery_shipment/: README.rst  __manifest__.py
shopfloor_delivery_shipment_mobile/: README.rst  __manifest__.py
shopfloor_gs1/: README.rst  __manifest__.py  utils.py
shopfloor_mobile/: README.rst  __manifest__.py
shopfloor_reception/: README.rst  __manifest__.py
shopfloor_reception_measuring_device/: __manifest__.py
shopfloor_reception_mobile/: README.rst  __manifest__.py
shopfloor_reception_package_dimension/: README.rst  __init__.py  __manifest__.py
shopfloor_reception_package_dimension_mobile/: README.rst  __manifest__.py
shopfloor_reception_packaging_dimension/: README.rst  __manifest__.py
shopfloor_reception_packaging_dimension_mobile/: README.rst  __manifest__.py
shopfloor_reception_putaway_recompute/: README.rst  __manifest__.py
shopfloor_reception_vendor_packaging/: __manifest__.py
shopfloor_single_product_transfer/: README.rst  __manifest__.py
shopfloor_single_product_transfer_mobile/: README.rst  __manifest__.py
shopfloor_vendor_packaging/: __manifest__.py
(+116 files in other folders)
