[project]
name = "odoo-addons-oca-stock-logistics-shopfloor"
version = "18.0.20250819.1"
dependencies = [
    "odoo-addon-shopfloor==18.0.*",
    "odoo-addon-shopfloor_batch_automatic_creation==18.0.*",
    "odoo-addon-shopfloor_dangerous_goods==18.0.*",
    "odoo-addon-shopfloor_delivery_shipment==18.0.*",
    "odoo-addon-shopfloor_delivery_shipment_mobile==18.0.*",
    "odoo-addon-shopfloor_mobile==18.0.*",
    "odoo-addon-shopfloor_reception==18.0.*",
    "odoo-addon-shopfloor_reception_mobile==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
