[project]
name = "odoo-addons-oca-stock-logistics-shopfloor"
version = "18.0.20260113.0"
dependencies = [
    "odoo-addon-shopfloor==18.0.*",
    "odoo-addon-shopfloor_batch_automatic_creation==18.0.*",
    "odoo-addon-shopfloor_checkout_sync==18.0.*",
    "odoo-addon-shopfloor_cluster_picking_repack==18.0.*",
    "odoo-addon-shopfloor_dangerous_goods==18.0.*",
    "odoo-addon-shopfloor_dangerous_goods_mobile==18.0.*",
    "odoo-addon-shopfloor_delivery_shipment==18.0.*",
    "odoo-addon-shopfloor_delivery_shipment_mobile==18.0.*",
    "odoo-addon-shopfloor_gs1==18.0.*",
    "odoo-addon-shopfloor_mobile==18.0.*",
    "odoo-addon-shopfloor_reception==18.0.*",
    "odoo-addon-shopfloor_reception_mobile==18.0.*",
    "odoo-addon-shopfloor_reception_packaging_dimension==18.0.*",
    "odoo-addon-shopfloor_reception_packaging_dimension_mobile==18.0.*",
    "odoo-addon-shopfloor_reception_vendor_packaging==18.0.*",
    "odoo-addon-shopfloor_single_product_transfer==18.0.*",
    "odoo-addon-shopfloor_single_product_transfer_mobile==18.0.*",
    "odoo-addon-shopfloor_vendor_packaging==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
